@@ -1,3 +1,9 @@
+2001-07-17  Chema Celorio  <chema@celorio.com>
+
+	* Makefile.am ($(desktop).in): desktop.in.in -> desktop.in ->desktop
+	so that we can merge the incondir path.
+	* add keyboard-capplet.png (by jimmac) an use it
+
 2001-07-10  Kai Lahmann <kl@linuxfaqs.de>
 
 	* keyboard-properties.desktop: Fixed wrong binary name
